Fixed history buttom cant click on IOS

--- a/app/globals.css
+++ b/app/globals.css
@@ -59,6 +59,6 @@ body {
     background-position: center;
     position: sticky;
     top: 0;
-    z-index: -10;
+    z-index: 0;
   }
 }
